# foundation

./: Brewfile  README.md
.claude/skills/update-rationale-tool-docs/: SKILL.md
.claude/skills/update-tool-docs/: SKILL.md
direnv/.config/direnv/: direnv.toml
foundation/: .foundation
gcam/.claude/skills/commit-messager/: SKILL.md
karabiner/.config/karabiner/: karabiner.json
lazyvim/.config/nvim/lua/config/: options.lua
lazyvim/.config/nvim/snippets/: package.json
plans/: abstract-pondering-otter.md
skill-runner/: DESIGN.md  README.md  pyproject.toml  skill  skill-mcp
skill-runner/src/skill_runner/: __init__.py  cli.py  core.py  mcp_server.py  schema.py
stow/: .stowrc
